affichage de la structure des données

--- a/Calculs des paramètres statistiques pour décrire une variable.ipynb
+++ b/Calculs des paramètres statistiques pour décrire une variable.ipynb
@@ -29,23 +29,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function seaborn.utils.get_dataset_names()>"
+       "['anagrams',\n",
+       " 'anscombe',\n",
+       " 'attention',\n",
+       " 'brain_networks',\n",
+       " 'car_crashes',\n",
+       " 'diamonds',\n",
+       " 'dots',\n",
+       " 'exercise',\n",
+       " 'flights',\n",
+       " 'fmri',\n",
+       " 'gammas',\n",
+       " 'geyser',\n",
+       " 'iris',\n",
+       " 'mpg',\n",
+       " 'penguins',\n",
+       " 'planets',\n",
+       " 'taxis',\n",
+       " 'tips',\n",
+       " 'titanic']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Données se trouvent dans seaborn\n",
-    "sns.get_dataset_names\n"
+    "sns.get_dataset_names()\n"
    ]
   },
   {
@@ -53,7 +71,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Importation des données\n",
+    "\n",
+    "df = sns.load_dataset('tips')\n"
+   ]
   }
  ],
  "metadata": {
