quelques stat descrives

--- a/Calculs des paramètres statistiques pour décrire une variable.ipynb
+++ b/Calculs des paramètres statistiques pour décrire une variable.ipynb
@@ -495,22 +495,385 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_bill</th>\n",
+       "      <th>tip</th>\n",
+       "      <th>size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>244.000000</td>\n",
+       "      <td>244.000000</td>\n",
+       "      <td>244.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>19.785943</td>\n",
+       "      <td>2.998279</td>\n",
+       "      <td>2.569672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>8.902412</td>\n",
+       "      <td>1.383638</td>\n",
+       "      <td>0.951100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.070000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>13.347500</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>17.795000</td>\n",
+       "      <td>2.900000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>24.127500</td>\n",
+       "      <td>3.562500</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>50.810000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "1.9144546380624725"
+       "       total_bill         tip        size\n",
+       "count  244.000000  244.000000  244.000000\n",
+       "mean    19.785943    2.998279    2.569672\n",
+       "std      8.902412    1.383638    0.951100\n",
+       "min      3.070000    1.000000    1.000000\n",
+       "25%     13.347500    2.000000    2.000000\n",
+       "50%     17.795000    2.900000    2.000000\n",
+       "75%     24.127500    3.562500    3.000000\n",
+       "max     50.810000   10.000000    6.000000"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Table de statistique descriptives\n"
+    "# Table de statistique descriptives\n",
+    "\n",
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_bill</th>\n",
+       "      <th>tip</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>day</th>\n",
+       "      <th>time</th>\n",
+       "      <th>size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>244.000000</td>\n",
+       "      <td>244.000000</td>\n",
+       "      <td>244</td>\n",
+       "      <td>244</td>\n",
+       "      <td>244</td>\n",
+       "      <td>244</td>\n",
+       "      <td>244.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>157</td>\n",
+       "      <td>151</td>\n",
+       "      <td>87</td>\n",
+       "      <td>176</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>19.785943</td>\n",
+       "      <td>2.998279</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.569672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>8.902412</td>\n",
+       "      <td>1.383638</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.951100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.070000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>13.347500</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>17.795000</td>\n",
+       "      <td>2.900000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>24.127500</td>\n",
+       "      <td>3.562500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>50.810000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        total_bill         tip   sex smoker  day    time        size\n",
+       "count   244.000000  244.000000   244    244  244     244  244.000000\n",
+       "unique         NaN         NaN     2      2    4       2         NaN\n",
+       "top            NaN         NaN  Male     No  Sat  Dinner         NaN\n",
+       "freq           NaN         NaN   157    151   87     176         NaN\n",
+       "mean     19.785943    2.998279   NaN    NaN  NaN     NaN    2.569672\n",
+       "std       8.902412    1.383638   NaN    NaN  NaN     NaN    0.951100\n",
+       "min       3.070000    1.000000   NaN    NaN  NaN     NaN    1.000000\n",
+       "25%      13.347500    2.000000   NaN    NaN  NaN     NaN    2.000000\n",
+       "50%      17.795000    2.900000   NaN    NaN  NaN     NaN    2.000000\n",
+       "75%      24.127500    3.562500   NaN    NaN  NaN     NaN    3.000000\n",
+       "max      50.810000   10.000000   NaN    NaN  NaN     NaN    6.000000"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe(include='all')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1er quartile: 13.3475\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Quartile de la variable 'total_bill'\n",
+    "print('1er quartile: {}'.format(df.total_bill.quantile(0.25)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2ème quartile: 17.795\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Quartile de la variable 'total_bill'\n",
+    "print('2ème quartile: {}'.format(df.total_bill.quantile(0.5)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3ème quartile: 24.127499999999998\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Quartile de la variable 'total_bill'\n",
+    "print('3ème quartile: {}'.format(df.total_bill.quantile(0.75)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1er quartile: 13.3475\n",
+      "2ème quartile: 17.795\n",
+      "3ème quartile: 24.127499999999998\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Quartile de la variable 'total_bill'\n",
+    "print('1er quartile: {}'.format(np.quantile(df.total_bill, 0.25)))\n",
+    "# Quartile de la variable 'total_bill'\n",
+    "print('2ème quartile: {}'.format(np.quantile(df.total_bill, 0.5)))\n",
+    "# Quartile de la variable 'total_bill'\n",
+    "print('3ème quartile: {}'.format(np.quantile(df.total_bill, 0.75)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1er quartile: 13.3475\n",
+      "2ème quartile: 17.795\n",
+      "3ème quartile: 24.127499999999998\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Quartile de la variable 'total_bill'\n",
+    "print('1er quartile: {}'.format(np.percentile(df.total_bill, 25)))\n",
+    "# Quartile de la variable 'total_bill'\n",
+    "print('2ème quartile: {}'.format(np.percentile(df.total_bill, 50)))\n",
+    "# Quartile de la variable 'total_bill'\n",
+    "print('3ème quartile: {}'.format(np.percentile(df.total_bill, 75)))"
    ]
   },
   {
@@ -518,7 +881,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Tous les quartiles en une seule lignes de code\n",
+    "\n",
+    "np."
+   ]
   }
  ],
  "metadata": {
