quelques stat descrives

--- a/Calculs des paramètres statistiques pour décrire une variable.ipynb
+++ b/Calculs des paramètres statistiques pour décrire une variable.ipynb
@@ -878,13 +878,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([13.3475, 17.795 , 24.1275])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tous les quartiles en une seule lignes de code\n",
+    "\n",
+    "np.quantile(df.total_bill, [0.25, 0.5, 0.75])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12.636, 16.222, 19.818, 26.098, 50.81 ])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# les quintiles\n",
+    "np.quantile(df.total_bill, [.2, .4, .6, .8, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.779999999999998"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# IQR de la variable 'total_bill'\n",
+    "\n",
+    "df.total_bill.quantile(.75) - df.total_bill.quantile(0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tous les quartiles en une seule lignes de code\n",
+    "from scipy import stats\n",
     "\n",
-    "np."
+    "stats.iqr"
    ]
   }
  ],
